Test GitHub Actions CI

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -19,13 +19,12 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "14" # Replace with the version your app uses
+          node-version: "14"
 
-      - name: Install dependencies
-        run: npm install # Install backend dependencies
+      - name: Simulate backend test
+        run: |
+          echo "Running backend test..."
+          echo "✅ Backend test completed successfully!"
 
-      - name: Run tests
-        run: npm test # Run the tests defined in your backend project
-
-      - name: Lint the code (Optional)
-        run: npm run lint # Lint the code if you are using eslint
+      - name: Lint (optional)
+        run: echo "Linting backend (simulated)..."
